--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-validation": "^3.0.7",
