--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.16.0",
     "http-proxy-middleware": "^2.0.6",
     "mdb-react-ui-kit": "^5.1.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-time-picker": "^2.0.1",
