--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-validation": "^3.0.7",
+    "socket.io-client": "^4.5.4",
     "validator": "^13.7.0",
     "validators": "^0.3.1",
     "web-vitals": "^2.1.4"
